# VortexEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  GenerateProjectFiles.bat  GenerateProjectFiles.sh  LICENSE  ReadMe.md
Engine/: CMakeLists.txt
Engine/src/: EditorLayer.cpp  EditorLayer.hpp  EngineApplication.cpp  Playground.cpp  Playground.hpp
Resources/VortexAPI/shaders/: compile.bat  compile.sh  triangle.frag  triangle.vert  ui.frag
TemplateAPI/: CMakeLists.txt
TemplateAPI/src/: Template.hpp
TemplateAPI/src/Template/: Application.cpp  Application.hpp
VortexAPI/: CMakeLists.txt
VortexAPI/src/: Vortex.hpp  VortexPCH.hpp
VortexAPI/src/Platform/: MacWindow.cpp  MacWindow.hpp  WindowsWindow.cpp  WindowsWindow.hpp
VortexAPI/src/Platform/GraphicsAPI/Vulkan/: VulkanContext.cpp  VulkanContext.hpp
VortexAPI/src/Platform/GraphicsAPI/Vulkan/Base/: VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanBufferLayout.hpp  VulkanCommandBuffers.cpp  VulkanCommandBuffers.hpp  VulkanCommandManager.cpp  VulkanCommandManager.hpp  VulkanDebug.cpp  VulkanDebug.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFrameBuffer.cpp  VulkanFrameBuffer.hpp  VulkanGeometry.hpp  VulkanInitializer.hpp  VulkanInstance.cpp  VulkanInstance.hpp  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanSubpass.hpp  VulkanSurface.cpp  VulkanSurface.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp  VulkanSyncManager.cpp  VulkanSyncManager.hpp  VulkanVertexArray.cpp  VulkanVertexArray.hpp
VortexAPI/src/Platform/GraphicsAPI/Vulkan/Core/: VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanBufferLayout.cpp  VulkanBufferLayout.hpp  VulkanCamera.cpp  VulkanCamera.hpp  VulkanCommandManager.cpp  VulkanCommandManager.hpp  VulkanDebug.hpp  VulkanDescriptorManager.cpp  VulkanDescriptorManager.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanInitializer.hpp  VulkanInstance.hpp  VulkanSurface.cpp  VulkanSurface.hpp  VulkanSyncManager.hpp  VulkanTools.hpp
VortexAPI/src/Platform/GraphicsAPI/Vulkan/Geometry/: VulkanGeometry.hpp
VortexAPI/src/Platform/GraphicsAPI/Vulkan/Rendering/: VulkanFrameBuffer.cpp  VulkanFrameBuffer.hpp  VulkanMaterial.cpp  VulkanMaterial.hpp  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.hpp  VulkanRenderPass.cpp  VulkanRenderPass.hpp  VulkanRenderTarget.cpp  VulkanRenderTarget.hpp  VulkanRendererAPI.cpp  VulkanRendererAPI.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanShaderLayout.cpp  VulkanShaderLayout.hpp  VulkanSubpass.cpp  VulkanSubpass.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp  VulkanTexture.cpp  VulkanTexture.hpp  VulkanVertexArray.cpp  VulkanVertexArray.hpp
VortexAPI/src/Platform/GraphicsAPI/Vulkan/UI/: VulkanUILayer.cpp  VulkanUILayer.hpp
VortexAPI/src/Platform/OS/: MacInput.cpp  MacInput.hpp  MacWindow.cpp  MacWindow.hpp  WindowsInput.cpp  WindowsInput.hpp  WindowsWindow.cpp  WindowsWindow.hpp
VortexAPI/src/Vortex/: Application.cpp  Application.hpp  Core.hpp  EntryPoint.hpp  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.hpp  Utils.hpp  Window.cpp  Window.hpp
VortexAPI/src/Vortex/Core/: Input.cpp  Input.hpp  InputCode.hpp  Timestep.hpp
VortexAPI/src/Vortex/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
VortexAPI/src/Vortex/Geometry/: Geometry.hpp
VortexAPI/src/Vortex/Renderer/: Buffer.cpp  Buffer.hpp  FrameBuffer.cpp  FrameBuffer.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Material.cpp  Material.hpp  OrthographicCamera.cpp  OrthographicCamera.hpp  RenderCommand.cpp  RenderCommand.hpp  RenderPass.cpp  RenderPass.hpp  RenderTarget.cpp  RenderTarget.hpp  Renderer.cpp  Renderer.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  ShaderLayout.cpp  ShaderLayout.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp
VortexAPI/src/Vortex/UI/: UILayer.cpp  UILayer.hpp
